# local-ai-workspace

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: config.py  database.py  main.py  models.py  requirements.txt
backend/routers/: app_settings.py  chat.py  documents.py  ollama.py  templates.py  workspaces.py
backend/services/: document_service.py  hybrid_search.py  ollama_service.py  rag_service.py  vector_store.py
backend/tests/: test_advanced_chunking.py  test_chunking.py  test_health.py  test_hybrid_search.py  test_text_extraction.py
backend/utils/: advanced_chunking.py  chunking.py  text_extraction.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatInput.tsx  ChatMessage.tsx  CommandPalette.tsx  ConfidenceBadge.tsx  ConfirmDialog.tsx  DebugView.tsx  DocumentList.tsx  ErrorBoundary.tsx  PromptTemplatePanel.tsx  ShortcutHelp.tsx  Sidebar.tsx  Skeleton.tsx  SourceCitation.tsx  SourceHighlight.tsx  Toast.tsx  WorkspaceSelector.tsx
src/hooks/: useChat.ts  useKeyboardShortcuts.ts  useOllama.ts  useTheme.ts  useWorkspace.ts
src/lib/: api.ts  types.ts
src/pages/: ChatPage.tsx  DocumentsPage.tsx  OnboardingPage.tsx  SettingsPage.tsx  WorkspacesPage.tsx
src/store/: appStore.ts
