[package]
name = "local-ai-workspace"
version = "0.1.0"
description = "Privacy-first, offline RAG desktop app"
authors = ["Local AI Workspace Contributors"]
edition = "2021"

[lib]
name = "local_ai_workspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
